fix: code inspection reports